<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:orientation="vertical"
>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/record_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    >
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/password_category_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/is_password_category"
    />
    <Button
            android:layout_marginTop="15dp"
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create"
            style="?attr/materialButtonOutlinedStyle"
    />
</LinearLayout>
